Bug 80580 - FILEOPEN: LibreOffice crash while opening document
Summary: FILEOPEN: LibreOffice crash while opening document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-27 05:18 UTC by Yogesh Bharate
Modified: 2014-07-29 18:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Document contains page break & '&R' in single paragraph. (24.34 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-27 05:18 UTC, Yogesh Bharate
Details
bt console from master sources (25.24 KB, text/plain)
2014-06-27 17:55 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yogesh Bharate 2014-06-27 05:18:03 UTC
Created attachment 101835 [details]
Document contains page break & '&R' in single paragraph.

Problem description: 

Steps to reproduce:
1. Open the document in LibreOffice.


Current behavior:
While opening document LibreOffice get crash.

Expected behavior:
Document must open in LibreOffice.
              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 Yogesh Bharate 2014-06-27 05:23:14 UTC
This issue is reproducible.

Step to reproduce :
1. Create .docx contains page break on first page.
2. Second page contains '&" with some character like 'x','z','#' etc.
3. Changes the size or font of '&character' which is on second page.
4. Precaution will be take all this i.e page break and '&character' contains in single paragraph'.
Comment 2 tommy27 2014-06-27 17:37:50 UTC
tested under Win7x64 

no crash with LO 4.2.4.2

no crash either with 4.3.0.1.0+
Build ID: 52613b9b632721ebb5167a4d9529c242a0b907da
TinderBox: Win-x86@42, Branch:libreoffice-4-3, Time: 2014-06-23_07:41:56

however when opened in 4.3.0.1.0+ the document is shows as 2 page, 1st emtpy and 3nd contains '&R'


@Yogesh
please specify your O/S
Comment 3 Julien Nabet 2014-06-27 17:55:14 UTC
Created attachment 101889 [details]
bt console from master sources

On pc Debian x86-64 with master sources updated yesterday, I could reproduce the crash.
I attached console logs + bt
Comment 4 Commit Notification 2014-07-29 14:46:47 UTC
Yogesh Bharate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=26b33fc2f2164481f5c423463f653012e4f4995d

fdo#80580: LO crashes while opening the document on ubuntu build



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.